Fix overflowing of slide preview.

--- a/lyricweb/style.css
+++ b/lyricweb/style.css
@@ -61,6 +61,9 @@ select {
   background-color: #ffffff;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+  display: flow-root;
 }
 
 h1,
